# tfg

./: .gitmodules  README.md  package.xml  setup.py
bringup/: package.xml  setup.py
bringup/launch/: main.launch.py
create3_sim/irobot_create_common/irobot_create_common_bringup/launch/: rviz2.launch.py
create3_sim/irobot_create_common/irobot_create_common_bringup/rviz/: hospital_create_view.rviz
create3_sim/irobot_create_common/irobot_create_description/urdf/: create3.urdf.xacro
create3_sim/irobot_create_common/irobot_create_description/urdf/sensors/: lidar_sensor.urdf.xacro
create3_sim/irobot_create_gz/irobot_create_gz_bringup/gui/create3/: gui.config
create3_sim/irobot_create_gz/irobot_create_gz_bringup/launch/: create3_gz.launch.py  create3_ros_gz_bridge.launch.py  sim.launch.py
hospital/: package.xml  setup.py
hospital/launch/: mundo.launch.py
hospital/models/aws_robomaker_hospital_curtain_closed_01/: model.sdf
hospital/models/aws_robomaker_hospital_curtain_half_open_01/: model.sdf
hospital/models/aws_robomaker_hospital_curtain_open_01/: model.sdf
hospital/models/aws_robomaker_hospital_floor_01_walls/: model.sdf
hospital/models/aws_robomaker_hospital_nursesstation_01/: model.sdf
hospital/models/aws_robomaker_residential_Trash_01/: model.sdf
hospital/worlds/: hospital.sdf
interfaces/: CMakeLists.txt  package.xml
interfaces/msg/: Envio.msg
launch/: mundo.launch.py
mis_nodos/: package.xml  setup.cfg  setup.py
mis_nodos/launch/: entregador.launch.py
mis_nodos/mis_nodos/: entregador.py  initial_pose_publisher.py  mux_out_to_cmd_vel.py
mis_nodos/nodos/: entregar.py  ir_to_scan.py
nav2/: package.xml  setup.py
nav2/config/: nav2_params.yaml
nav2/launch/: navigation.launch.py
nav2_create/: package.xml  setup.cfg  setup.py
nav2_create/config/: mapper_params_online_async.yaml  nav2_params.yaml  twist_mux.yaml
nav2_create/launch/: nav2.launch.py  navigation.launch.py  slam.launch.py  twist_mux.launch.py
nav2_create/maps/: hospital.pgm  hospital.yaml  hospital_floor_1_map.yaml  my_map.pgm  my_map.yaml  prueba.pgm  prueba.yaml
nav2_create/nav2_create/: initial_pose_publisher.py
robot/: package.xml  setup.py
robot/launch/: robot.launch.py
