<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jmansocordoba@gmail.com">jorge-manso-cordoba</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencias-->
  <exec_depend>launch</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>irobot_create_gz_bringup</exec_depend>
  <exec_depend>hospital</exec_depend>

  <!-- Para que funcione como un paquete Python -->
  <build_depend>ament_python</build_depend>
  <exec_depend>ament_python</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
